fix bugs: social media not showing up completely

--- a/src/User/User.scss
+++ b/src/User/User.scss
@@ -144,8 +144,11 @@
     .user-socmed {
       padding: 10px;
       text-align: right;
+      display: flex;
+      flex-direction: row-reverse;
       a {
         margin-left: 10px;
+        
       }
     }
 
